# VideoCapture

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
example/: record_stream_example.cpp
include/video/: AudioCapture.h  AudioEncoder.h  Common.h  MediaSession.h  RtmpPublisher.h  StreamMuxer.h  VideoCapture.h  VideoEncoder.h
src/: AudioCapture.cpp  AudioEncoder.cpp  Common.cpp  MediaSession.cpp  RtmpPublisher.cpp  StreamMuxer.cpp  VideoCapture.cpp  VideoEncoder.cpp
